--- a/github_portfolio/package.json
+++ b/github_portfolio/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://woo.brendan.github.io/github_portfolio/github_portfolio",
   "name": "github_portfolio",
   "version": "0.1.0",
   "private": true,
@@ -21,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
