--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://woobrendan.github.io",
+  "homepage": "https://woobrendan.github.io",
   "name": "github_portfolio",
   "version": "0.1.0",
   "private": true,
